--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = localremote
+    remote = myremote
 ['remote "localremote"']
     url = ../../local_remote_dir
+['remote "myremote"']
+    url = s3://fastapibucket1
