--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Configure AWS credentials from Production account
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: AKIAQE4EXF3GUHPM5HX4
-        aws-secret-access-key: 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
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     - name: Setup DVC
       uses: iterative/setup-dvc@v1
